--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       Move you nose to move the square</span>
     <br>
 
+    <span id="square_side">Squares length and width is: </span>
+
   </h3>
 </center>
 <div class="copy-right-footer">Developed by: richsaim</div>
